# dumbrl

./: .pre-commit-config.yaml  README.md  game.py  pyproject.toml
dumbrl/environments/: __init__.py  press_the_light_up_button.py
dumbrl/experiments/: run_press_the_light_up_button.py
